# scipy2014_boost_python_workshop_student_material

./: CMakeLists.txt  README.md  makefile  plumbing_test.cpp  smoke_test.cpp
answers/: hello_world.01.cpp  hello_world.02.cpp  hello_world.03.cpp
answers/call_policies/: call_policies.01.cpp  call_policies.02.cpp
answers/exceptions/: exceptions.01.cpp  exceptions.02.cpp  exceptions.03.cpp
answers/rps/: rps.01.cpp  rps.02.cpp  rps.03.cpp  rps.04.cpp  rps.05.cpp  rps.06.cpp  rps.07.cpp  rps.08.cpp  rps.09.cpp  rps.10.cpp  rps.11.cpp  rps.12.cpp  rps.13.cpp  rps.14.cpp  rps.15.cpp  rps.16.cpp
exercises/: hello_world.cpp  make.common  make.common.OSX  makefile  smoke_test.cpp
exercises/call_policies/: call_policies.cpp  makefile  test.py
exercises/exceptions/: exceptions.cpp  makefile
exercises/rps/: makefile  rps.cpp
vs/BoostPythonWorkshop/: BoostPythonWorkshop.sln  common.props  extension_module.props
vs/BoostPythonWorkshop/Plumbing test/: Plumbing test.vcxproj  Plumbing test.vcxproj.filters
vs/BoostPythonWorkshop/Smoke test/: Smoke test.vcxproj  Smoke test.vcxproj.filters
vs/BoostPythonWorkshop/call_policies/: call_policies.vcxproj  call_policies.vcxproj.filters
vs/BoostPythonWorkshop/exceptions/: exceptions.vcxproj  exceptions.vcxproj.filters
vs/BoostPythonWorkshop/hello_world/: hello_world.vcxproj  hello_world.vcxproj.filters
vs/BoostPythonWorkshop/rps/: rps.vcxproj  rps.vcxproj.filters
